remove unused css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Purevue app for ipad developed un javascript</title>
-    <link rel="stylesheet" href="./devices.min.css" />
+    <link rel="stylesheet" href="./devices.css" />
     <style>
       *{padding: 0;margin:0;}
       html{ height:100%}
